--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang='en'>
     <head>
         <meta charset='utf-8'>
-        <title>Drug abuse</title>
+        <title>Substance abuse</title>
         <link rel='stylesheet' type='text/css' href='style.css'>
         <script type='text/javascript' src='js/d3.v5.js' charset='utf-8'></script>  
         <script type='text/javascript'></script>
@@ -19,7 +19,7 @@
             <div class="context" id="context">
                 <br>The United States has a major problem of its own: the United States consumes 80 per cent of the world's opiate production, and there are an estimated two to three million dependent American citizens. The total estimated cost to American society, including health care costs and loss of competitiveness, would be almost $80 billion.<br>
                 Overdose deaths jumped by the widest gap in U. S. history in 2016, according to preliminary data compiled by the New York Times. The Times estimates that in 2016, more than 59,000 people died from drug overdose, an increase of 19% over 2015.<br><br>
-                <h3>Exemple in New Jersey</h3>
+                <h3>Example in New Jersey</h3>
                 The following graph shows the evolution of drug-related deaths in New Jersey. We can see that there are peaks in some years. After some research we can find that some events have a direct link with the cause of these peaks. Here are some of them:<br>           
             
             <ul class="mt-overflow-auto">
